--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://mewahbosku.site/?ref=resmiwd77" />
+<meta http-equiv="Refresh" content="0; url='https://mewah77sukses2.site/?ref=resmiwd77" />
